--- a/themes/Frontend/Bootcamp/frontend/_public/src/less/_modules/header.less
+++ b/themes/Frontend/Bootcamp/frontend/_public/src/less/_modules/header.less
@@ -2,19 +2,79 @@
   padding-top: 30px;
 }
 .telephone {
+  width: 50%;
   float: right;
   font-size: 26px;
   color: #5d6a7f;
   font-family: "Montserrat", sans-serif;
   line-height: 30px;
-  margin-bottom: 16px;
   text-align: right;
+  margin-bottom: 30px;
 
     .under_text {
       font-size: 15px;
+
+    }
+    .phone_text {
+      margin-bottom: 16px;
     }
 }
 .icon--phone:before {
   color: #a4adbb;
+
+}
+
+.header-main {
+
+  .shop--navigation {
+    width: 100%;
+  }
+}
+
+.header-main {
+
+  .logo-main {
+    width: 50%;
+  }
+}
+
+.shop--navigation {
+
+  .entry--search {
+    width: 50%;
+  }
+  .entry--cart {
+    background: #83b817;
+    width: 50%;
+  }
+  .cart--display {
+    display: inline-block;
+  }
+}
+
+.navigation--list {
+
+  .entry--cart {
+
+    .cart--link {
+
+      .cart--amount {
+        display: none;
+      }
+    }
+  }
+}
+.header-main {
+
+  .logo-main {
+
+    .logo--shop {
+      height: 144px;
+    }
+    .logo--link {
+      height: 144px;
+      margin-top: -20px;
+    }
+  }
 
 }
