--- a/themes/Frontend/Bootcamp/frontend/_public/src/less/_modules/main-navigation.less
+++ b/themes/Frontend/Bootcamp/frontend/_public/src/less/_modules/main-navigation.less
@@ -1,6 +1,7 @@
 .navigation-main {
   background: #282d33;
   border: none;
+  padding: 4px 0;
   .navigation--list {
     background: #282d33;
     color: #a4adbb;
@@ -9,6 +10,12 @@
   }
   .navigation--link {
     padding: 15px 20px;
+  }
+}
+
+@media-screen and (min-width: @tabletViewportWidth) {
+  .navigation-main {
+    padding: 4px 0;
   }
 }
 
